Revise BEM syntax Correct sizes Correct overlap Add background images instead of tags

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
 .page {
   min-width: 1100px;
-  /* we don't know how to make mobile versions of websites yet, */
-  /* so here we've set a minimum page width */
   max-width: 1600px;
-  /* here we've set a maximum page width */
   margin: 0 auto;
-  /* this ensures that all content is centered on screens wider than 1600px */
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -13,7 +9,6 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* parameters for the header section */
   position: relative;
   display: flex;
   flex-direction: column;
@@ -31,51 +26,47 @@
   position: absolute;
   top: 30px;
   left: 64px;
+  background-image: url("../images/logo_place_header.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-clip: initial;
 }
 
 .logo_place_footer {
   display: flex;
   width: 183px;
   height: 35px;
+  background-image: url("../images/logo_place_footer.png");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .header__title {
-  width: 730px;
-  height: 96px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   position: relative;
   z-index: 2;
-  display: flex;
-  align-items: center;
 }
 
 .header__subtitle {
   position: absolute;
   bottom: 30px;
   left: 64px;
-}
-
-.header__subtitle-paragraph {
-  margin: 0;
-}
-
-.header__subtitle-text {
+  max-width: 380px; /*Estimated required width - not specified in brief*/
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .header__link {
   color: #2f80ed;
   text-decoration: none;
-}
-
-.header__link:hover {
-  border-bottom: 1px solid #2f80ed;
+  display: block;
 }
 
 .header__main-illustration {
@@ -87,7 +78,6 @@
   z-index: 1;
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   position: absolute;
   top: 64px;
@@ -100,16 +90,13 @@
 .two-columns {
   margin: 100px auto;
   width: 80%;
-}
-
-.two-columns__title {
   display: flex;
   justify-content: space-between;
 }
 
 .two-columns__brief {
   margin: 0;
-  width: 175px;
+  max-width: 175px;
   color: #2f80ed;
   line-height: 1.2;
   font-size: 18px;
@@ -128,7 +115,7 @@
   font-weight: normal;
 }
 
-.two-columns__paragraph:last-child {
+.two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
@@ -142,7 +129,7 @@
   margin-top: 100px;
 }
 
-.digits__section-title {
+.section-title {
   width: 60%;
   margin: 0 auto 20px;
   text-align: center;
@@ -150,7 +137,8 @@
   font-size: 60px;
   font-weight: bold;
 }
-.digits__section-subtitle {
+
+.section-subtitle {
   width: 60%;
   margin: 0 auto 60px;
   text-align: center;
@@ -158,6 +146,7 @@
   font-size: 24px;
   font-weight: normal;
 }
+
 .table {
   display: flex;
   flex-wrap: wrap;
@@ -166,17 +155,17 @@
   justify-content: space-between;
   padding: 0;
 }
+
 .table__cell {
   list-style: none;
   width: 250px;
   margin-bottom: 60px;
 }
 
-/* including elements with key-value modifiers */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin: 40px auto;
+  margin: 40px 0 0;
   z-index: 1;
 }
 
@@ -200,6 +189,7 @@
   font-weight: bold;
   margin: 0;
 }
+
 .table__text {
   margin: 20px 0 0;
   line-height: 1.2;
@@ -207,13 +197,9 @@
   font-weight: normal;
 }
 
-.table__source {
-  margin-top: 20px;
-}
-
 .feynman {
   margin-top: 40px;
-  height: 790px;
+  min-height: 790px;
   background-color: #f2f2f2;
   background-image: url("../images/feynman.png");
   background-repeat: no-repeat;
@@ -223,7 +209,7 @@
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
   text-align: center;
   margin: auto;
   padding-top: 100px;
@@ -231,6 +217,7 @@
   font-size: 120px;
   font-weight: bold;
 }
+
 .feynman__subtitle {
   text-align: center;
   margin: 70px auto;
@@ -238,6 +225,7 @@
   font-size: 36px;
   font-weight: normal;
 }
+
 .feynman__link {
   color: #2f80ed;
   text-decoration: none;
@@ -249,10 +237,6 @@
   font-weight: normal;
 }
 
-.feynman__link:hover {
-  border-bottom: #2f80ed 1px solid;
-}
-
 .kaufman {
   background-color: #1f1f1f;
   position: relative;
@@ -260,7 +244,7 @@
   padding-bottom: 50px;
 }
 
-.kaufman__title {
+.section-title__theme_dark {
   color: white;
   text-align: center;
   width: 60%;
@@ -273,7 +257,7 @@
   z-index: 1;
 }
 
-.kaufman__subtitle {
+.section-subtitle__theme_dark {
   width: 60%;
   color: white;
   text-align: center;
@@ -284,6 +268,8 @@
 }
 
 .kaufman__triangle {
+  width: 660px;
+  height: 636px;
   position: absolute;
   top: 0;
   right: -124px;
@@ -293,43 +279,43 @@
   background: #1f1f1f;
   color: white;
   min-height: 350px;
-}
-.footer__columns {
   display: flex;
-  justify-content: space-around;
-  padding: 60px 0 40px;
 }
 
-.footer__column_content_copyright {
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 1422px; /*Estimated required width - not specified in brief*/
+  padding: 60px 0 40px;
+  margin: 0 auto;
+}
+
+.footer__copyright {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  flex-basis: 711px;
+  width: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 350px;
-}
-
-.footer__column_content_about {
-  /* Required but not used */
-}
-.footer__column_content_social {
-  /* Required but not used */
 }
 
 .footer__author {
+  margin: 18px 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
 }
+
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
   margin: 0 auto 20px;
 }
+
 .footer__list {
+  margin: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
@@ -340,10 +326,6 @@
 .footer__column-link {
   text-decoration: none;
   color: white;
-}
-
-.footer__column-link:hover {
-  border-bottom: 1px solid #f2f2f2;
 }
 
 .footer__social-icons {
